# pixelverse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  docs.yml
docs/: api.md  apiref.md  index.md
notebooks/: compositing_debug.ipynb  olmoearth_embeddings_generation.ipynb  olmoearth_pixel_embeddings_generation.ipynb  sample_embeddings_generation.ipynb
pixelverse/: README.md
scripts/: export_olmoearth.py  export_tessera.py
src/pixelverse/: __init__.py  generate_embeddings.py
src/pixelverse/download/: __init__.py  sentinel1.py  sentinel2.py  stac_to_xr.py
src/pixelverse/models/: __init__.py  olmoearth.py  registry.py  tessera.py  transforms.py
tests/: test_download.py  test_generate_embeddings.py  test_models.py  test_transforms.py
tests/fixtures/: s2_item.json
