[project]
name = "pixelverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martha", email = "martha@developmentseed.org" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "pystac>=1.14.1",
    "torch>=2.9.0",
    "xarray>=2025.10.1",
    "zarr>=3.1.3",
]

[project.scripts]
pixelverse = "pixelverse:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.1",
    "ty>=0.0.1a23",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long, handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["pixelverse"]

[tool.ty]
pyproject = "pyproject.toml"
